Made massive changes to ADT/STD interfaces to provide better constness support.

--- a/libopenxds_adt/documentation/openxds.adt.IGeneralTour.html
+++ b/libopenxds_adt/documentation/openxds.adt.IGeneralTour.html
@@ -7,6 +7,50 @@ BODY {}DIV.document {}DIV.text { width:718px; width:550px; margin-left:auto; mar
 <body>
 <div class='document'>
 <div class='text'>
+<h2 class='h2'>	IGeneralTour (interface)</h2>
+<h3 class='h3'>		Usage</h3>
+<p class='paragraph'>
+Linkage:
+</p>
+<pre>
+-lopenxds_adt
+</pre>
+<p class='paragraph'>
+To use the interface:
+</p>
+<pre>
+#include &lt;openxds.adt/IGeneralTour.h&gt;
+
+using namespace openxds::adt;
+</pre>
+<h3 class='h3'>		Method Summary</h3>
+<table>
+<thead>
+<tr>
+	<th>Returns</th><th>Method-name</th><th>Throws</th>
+</tr>
+</thead>
+<tbody>
+
+<tr><td><b>Object*</b></td> <td><a href='#doGeneralTour'>doGeneralTour</a></td> </tr>
+
+</tbody>
+</table>
+<h3 class='h3'>		Methods</h3>
+<a name='doGeneralTour'></a>
+<hr>
+<h4 class='h4'>			doGeneralTour</h4>
+<pre>
+Object* doGeneralTour();
+</pre>
+<p class='paragraph'>
+Returns
+</p>
+<blockquote>
+<p class='paragraph'>
+An object instance whose type depends on the implementation of the deriving class.
+</p>
+</blockquote>
 </div>
 </div>
 </body>
