--- a/libopenxds_adt/documentation/openxds.adt.IEntry.html
+++ b/libopenxds_adt/documentation/openxds.adt.IEntry.html
@@ -7,6 +7,80 @@ BODY {}DIV.document {}DIV.text { width:718px; width:550px; margin-left:auto; mar
 <body>
 <div class='document'>
 <div class='text'>
+<h2 class='h2'>	IEntry (interface)</h2>
+<h3 class='h3'>		Usage</h3>
+<p class='paragraph'>
+Linkage:
+</p>
+<pre>
+-lopenxds_adt
+</pre>
+<p class='paragraph'>
+To use the interface:
+</p>
+<pre>
+#include &lt;openxds.adt/IEntry.h&gt;
+
+using namespace openxds::adt;
+</pre>
+<h3 class='h3'>		Method Summary</h3>
+<table>
+<thead>
+<tr>
+	<th>Returns</th><th>Method-name</th><th>Throws</th>
+</tr>
+</thead>
+<tbody>
+
+<tr><td><b>const char*</b></td><td><a href='#getKey'  >getKey  </a></td> <td></td> </tr>
+<tr><td><b>E&         </b></td><td><a href='#getValue'>getValue</a></td> <td></td> </tr>
+<tr><td><b>IEntry(E)* </b></td><td><a href='#copy'    >copy    </a></td> <td></td> </tr>
+
+</tbody>
+</table>
+<h3 class='h3'>		Methods</h3>
+<a name='getKey'></a>
+<hr>
+<h4 class='h4'>			getKey</h4>
+<pre>
+const char* getKey();
+</pre>
+<p class='paragraph'>
+Returns
+</p>
+<blockquote>
+<p class='paragraph'>
+Returns the entry's <i>key</i>.
+</p>
+</blockquote>
+<a name='getValue'></a>
+<hr>
+<h4 class='h4'>			getValue</h4>
+<pre>
+E& getValue();
+</pre>
+<p class='paragraph'>
+Returns
+</p>
+<blockquote>
+<p class='paragraph'>
+A reference to the <i>element</i> value stored in this entry.
+</p>
+</blockquote>
+<a name='copy'></a>
+<hr>
+<h4 class='h4'>			copy</h4>
+<pre>
+IEntry&lt;E&gt;* copy();
+</pre>
+<p class='paragraph'>
+Returns
+</p>
+<blockquote>
+<p class='paragraph'>
+A new <i>IEntry</i> instance, that the user is responsible for deallocating.
+</p>
+</blockquote>
 </div>
 </div>
 </body>
